updates styling on Workout page to prevent clipping of accessorry exercises

--- a/src/styles/Workout.module.css
+++ b/src/styles/Workout.module.css
@@ -117,13 +117,14 @@
   align-items: center;
   width: 90vw;
   max-width: 630px;
+  height: 65vh;
   /* width: 90vw; */
   /* justify-content: flex-start;
   /* padding: 10px; */
   /* background-color: #14B8A6; */
   border-radius: 1.5em;
   /* color: black; */
-  overflow-y: scroll;
+  overflow-x: scroll;
   /* border: 1px solid red;
   border-radius: 1.5em; */
 }
